<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPOT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_creer_compte">CreerCompte</string>
    <string name="title_activity_accueil1">Accueil1</string>
    <string name="title_activity_ajout_ev">AjoutEv</string>
    <string name="title_activity_list_ev">ListEv</string>
    <string name="title_activity_evenement">Evenement</string>
    <string name="title_activity_profil_perso">ProfilPerso</string>
    <string name="title_activity_list_amis">ListAmis</string>
    <string name="title_activity_ajout_amis">AjoutAmis</string>
    <string name="title_activity_historique">Historique</string>
    <string name="title_activity_profils">Profils</string>

    <string-array name="items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>

    <string name="nomEvent">Titre de l\'évènement</string>
    <string name="descriptionEvent"> Ici on aura la description de l\'évènement en détailé par l\'utilisateur</string>
    <string name="info">Info</string>
    <string name="prix">Prix</string>
    <string name="lieu">Lieu</string>
    <string name="identifiant">Identifiant</string>
    <string name="title">SPOT</string>
    <string name="motDePasse">Mot de passe</string>
    <string name="connexion">     Connexion     </string>
    <string name="inscription">     Inscription     </string>
    <string name="confirmation">Confirmation</string>
    <string name="textBox">En cliquant ici, j\'accepte les conditions d\'utilisation</string>
    <string name="creation">    Créer mon compte    </string>
    <string name="email">    E-Mail    </string>
    <string name="Plus">    +    </string>
    <string name="Recherche">  #  Mots-clés   </string>
    <string name="titre">  TITRE   </string>
    <string name="description">  Description ... </string>

    <string name="spinner_title"> Catégorie </string>
    <string-array name="categories_arrays">
        <item>Art et Culture</item>
        <item>Ballade</item>
        <item>Restaurant</item>
        <item>Bar</item>
        <item>Concert</item>
        <item>Shopping</item>
    </string-array>


</resources>