<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marieanne.spot.Accueil1" >

    <EditText
        android:id="@+id/identifiant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eMail"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:background="#d0d0d0"
        android:hint="@string/identifiant"
        android:inputType="text"
        android:textColor="#2b2b2b"
        android:textColorHint="#2b2b2b" />

    <EditText
        android:id="@+id/eMail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eMail"
        android:layout_below="@+id/identifiant"
        android:layout_marginTop="33dp"
        android:background="#d0d0d0"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#2b2b2b"
        android:textColorHint="#2b2b2b" />

    <EditText
        android:id="@+id/motDePasse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/motDePasse"
        android:layout_below="@+id/eMail"
        android:layout_marginTop="33dp"
        android:background="#d0d0d0"
        android:hint="@string/motDePasse"
        android:inputType="textPassword"
        android:textColor="#2b2b2b"
        android:textColorHint="#2b2b2b" />

    <EditText
        android:id="@+id/confirmation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eMail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:background="#d0d0d0"
        android:hint="@string/confirmation"
        android:inputType="textPassword"
        android:textColor="#2b2b2b"
        android:textColorHint="#2b2b2b" />

    <Button
        android:id="@+id/creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/boutonrond2"
        android:onClick="goToPageP"    
        android:layout_marginBottom="28dp"
        android:text="@string/creation"
        android:textColor="#efefef"/>

    <CheckBox
        android:id="@+id/acceptation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/creation"
        android:layout_alignLeft="@+id/confirmation"
        android:layout_marginBottom="41dp"
        android:background="#d0d0d0"
        android:text="@string/textBox"
        android:textColor="#2b2b2b" />

</RelativeLayout>