<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/couv"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#6D071A"
        android:textSize="90sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/identifiant"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#d0d0d0"
        android:hint="@string/identifiant"
        android:inputType="text"
        android:textColor="#2b2b2b"
        android:textColorHint="#2b2b2b"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/motDePasse"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#d0d0d0"
        android:hint="@string/motDePasse"
        android:inputType="textPassword"
        android:password="true"
        android:textColor="#2b2b2b"
        android:textColorHint="#2b2b2b"
        android:layout_below="@+id/identifiant"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boutonrond2"
        android:gravity="center"
        android:onClick="goToEvent"
        android:text="@string/connexion"
        android:textColor="#efefef"
        android:layout_marginLeft="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boutonrond2"
        android:gravity="center"
        android:onClick="goToInscription"
        android:text="@string/inscription"
        android:textColor="#efefef"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/connexion"
        android:layout_marginLeft="48dp" />

</RelativeLayout>