<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#efefef"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marieanne.spot.Accueil1"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:gravity="center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="TYPE" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:prompt="@string/spinner_title"
            android:entries="@array/categories_arrays">
        </Spinner>

    </LinearLayout>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#d0d0d0"
            android:hint="@string/titre"
            android:inputType="text"
            android:textColor="#2b2b2b"
            android:textColorHint="#2b2b2b"

    />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageAjoutEv"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/photo">
        </ImageView>

        <Button
            android:id="@+id/buttonTakePicture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/boutonrond2"
            android:text="@string/Plus"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#efefef"
            android:textSize="35dp"
            />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#d0d0d0"
        android:hint="@string/Recherche"
        android:inputType="text"
        android:textColor="#2b2b2b"
        android:textColorHint="#2b2b2b"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#d0d0d0"
        android:hint="@string/description"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#2b2b2b"
        android:gravity="center"
       />


            <ImageButton
                android:layout_marginTop="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageButton"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/check"
                android:scaleType="fitCenter"
                android:background="#efefef" />
        </LinearLayout>

    </ScrollView>



</LinearLayout>